--- a/src/app/proveedores/proveedores.component.html
+++ b/src/app/proveedores/proveedores.component.html
@@ -1,1 +1,11 @@
-<p>proveedores works!</p>
+<div class="contenedor-Proveedores">
+    <ul class="listaProveedores">
+        <li class="proveedorLi"><h3 class="h3prov">Proveedores</h3></li>
+        <li class="proveedorLi">proveedor 1</li>
+        <li class="proveedorLi">proveedor 1</li>
+        <li class="proveedorLi">proveedor 1</li>
+        
+    
+    </ul>
+    
+</div>
