sumo funcionalidad de agregar y eliminar de productos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-supermercados></app-supermercados>
-<app-productos></app-productos>
-<app-proveedores></app-proveedores>
-<app-categorias></app-categorias>
-<app-etiquetas></app-etiquetas>
+<app-pagina-principal></app-pagina-principal>
