--- a/src/app/pagina-principal/pagina-principal.component.html
+++ b/src/app/pagina-principal/pagina-principal.component.html
@@ -1,1 +1,12 @@
-<app-registrarse></app-registrarse>
+<div class="contenedor-nav">
+    <nav class="navegador">
+        <ul class="lista-navegador">
+            <li class="item-nav"><a href="">inicio</a></li>
+            <li class="item-nav"><a href="proveedores">Proveedores</a></li>
+            <li class="item-nav"><a href="productos">Productos</a></li>
+            <li class="item-nav"><a href="categorias">Categorias</a></li>
+
+
+        </ul>
+    </nav>
+</div>
