--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-*{background-color:rgb(227, 216, 227);}
+*{background-color:rgb(227, 216, 227);
+
+margin: 0;
+padding: 0;
+}
