enrutamiento sin terminar,(no funca)

--- a/src/app/pagina-principal/pagina-principal.component.html
+++ b/src/app/pagina-principal/pagina-principal.component.html
@@ -1,12 +1,13 @@
 <div class="contenedor-nav">
     <nav class="navegador">
-        <ul class="lista-navegador">
-            <li class="item-nav"><a href="">inicio</a></li>
-            <li class="item-nav"><a href="proveedores">Proveedores</a></li>
-            <li class="item-nav"><a href="productos">Productos</a></li>
-            <li class="item-nav"><a href="categorias">Categorias</a></li>
-
-
-        </ul>
+      <ul class="lista-navegador">
+        <li class="item-nav"><a routerLink="/">Inicio</a></li>
+        <li class="item-nav"><a routerLink="/proveedores">Proveedores</a></li>
+        <li class="item-nav"><a routerLink="/productos">Productos</a></li>
+        <li class="item-nav"><a routerLink="/categorias">Categorías</a></li>
+      </ul>
     </nav>
-</div>
+    
+  </div>
+
+  
