--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -5,8 +5,8 @@
         <li class="item">producto 1</li>
         <li class="item">producto 1</li>
         <li class="item">producto 1</li>
-    
-        <li *ngFor="let producto of productos">{{producto.nombreProducto}}</li>
-    
+
+        <li *ngFor="let producto of productosArray">{{producto.nombreProducto}}</li>
+
     </ul>
 </div>
