--- a/src/app/pagina-principal/pagina-principal.component.html
+++ b/src/app/pagina-principal/pagina-principal.component.html
@@ -2,12 +2,13 @@
     <nav class="navegador">
       <ul class="lista-navegador">
         <li class="item-nav"><a routerLink="/">Inicio</a></li>
-        <li class="item-nav"><a routerLink="/proveedores">Proveedores</a></li>
-        <li class="item-nav"><a routerLink="/productos">Productos</a></li>
-        <li class="item-nav"><a routerLink="/categorias">Categorías</a></li>
+        <li class="item-nav"><a href="/proveedores">Proveedores</a></li>
+        <li class="item-nav"><a href="/productos">Productos</a></li>
+        <li class="item-nav"><a href="/categorias">Categorías</a></li>
       </ul>
     </nav>
     
+
   </div>
 
   
