--- a/src/app/pagina-principal/pagina-principal.component.html
+++ b/src/app/pagina-principal/pagina-principal.component.html
@@ -1,14 +1,1 @@
-<div class="contenedor-nav">
-    <nav class="navegador">
-      <ul class="lista-navegador">
-        <li class="item-nav"><a routerLink="/">Inicio</a></li>
-        <li class="item-nav"><a href="/proveedores">Proveedores</a></li>
-        <li class="item-nav"><a href="/productos">Productos</a></li>
-        <li class="item-nav"><a href="/categorias">Categorías</a></li>
-      </ul>
-    </nav>
-    
-
-  </div>
-
-  
+<app-navbar></app-navbar>
