arreglo html productos

--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -6,7 +6,7 @@
         <li class="item">producto 1</li>
         <li class="item">producto 1</li>
     
-        <li *ngFor="let producto of productosArray">{{producto.nombreProducto}}</li>
+        <li *ngFor="let producto of arrayProductos">{{producto.nombreProducto}}</li>
     
     </ul>
 </div>
