--- a/src/app/proveedores/proveedores.component.html
+++ b/src/app/proveedores/proveedores.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar></app-navbar>
 <div class="contenedor-Proveedores">
     <ul class="listaProveedores">
         <li class="proveedorLi"><h3 class="h3prov">Proveedores</h3></li>
