--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="contenedor">
     <ul class="listaProductos">
         <li class="item"><h3 class="h3Prod">Productos</h3></li>
